@startuml

title __COMMUNITY's Class Diagram__\n

'skinparam monochrome true
skinparam shadowing false
skinparam defaultFontName xfonts-wqy
skinparam classFontSize 10
skinparam dpi 300
skinparam activity  {
    '菱形图字体大小
    DiamondFontSize 20
    '箭头上的字体大小
    ArrowFontSize 20
    '框图内字体大小
    FontSize 20
}

  namespace com.wxc.campuslife {
    namespace community {
      class com.wxc.campuslife.community.CommunityActivity {
          # onCreate()
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace community {
      class com.wxc.campuslife.community.ContactActivity {
          ~ handler : Handler
          ~ nickname : String
          ~ userid : String
          ~ wv : WebView
          # onCreate()
          - getChatChannel()
          - getChatLobby()
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace community {
      class com.wxc.campuslife.community.ForumActivity {
          ~ flag : Boolean
          - articleList : List<Article>
          - handler : Handler
          # onCreate()
          - showArticles()
      }
    }
  }
  

  com.wxc.campuslife.community.CommunityActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.wxc.campuslife.community.ContactActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.wxc.campuslife.community.ContactActivity o-- com.wxc.campuslife.utils.AlarmManagerUtils : alarmManagerUtils
  com.wxc.campuslife.community.ForumActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
